--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
         <title>Encriptador de textos</title>
-        <link rel="icon" type="image/x-icon" href="src/favicon.ico" />
-        <link rel="stylesheet" type="text/css" href="src/style.css" />
+        <link rel="stylesheet" type="text/css" href="./src/style.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
         <link href="https://use.fontawesome.com/releases/v6.4.0/css/all.css" rel="stylesheet" />
-        <!-- <link href="https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&display=swap" rel="stylesheet" /> -->
         <link href="https://fonts.googleapis.com/css2?family=Noto+Emoji&display=swap" rel="stylesheet" />
     </head>
 
@@ -62,6 +60,6 @@
         <footer>
             <p class="footer">~ Lean Mazza 2023 ✨</p>
         </footer>
-        <script src="src/script.js"></script>
+        <script src="./src/script.js"></script>
     </body>
 </html>
